BLI_assert failed: BKE_id_defgroup_list_get() #89899

Closed
opened 2021-07-16 16:06:05 +02:00 by Demeter Dzadik · 5 comments
Member

System Information
Operating system: Linux-5.8.0-7642-generic-x86_64-with-glibc2.32 64 Bits
Graphics card: GeForce RTX 2080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.56

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-07-16 07:47, hash: 038345fa56
Worked: Before 3b6ee8cee7 sorry @HooglyBoogly @JacquesLucke, got another one for ya!

Short description of error
In our pipeline, we keep character hair grooming and rigging in separate files, and use an addon to combine them. Recently, the "Update Grooming" button started crashing with the following stack trace: P2257

I have hunted down the crash to this line in our code:

bpy.ops.object.data_transfer({'object': obj_from, 'selected_editable_objects': [obj_to]},
			data_type='VGROUP_WEIGHTS',
			use_create=True,
			vert_mapping='NEAREST',
			layers_select_src='ALL',
			layers_select_dst='NAME',
			mix_mode='REPLACE')

Running Blender with --threads 1 also produces the same crash, but running only this line instead of the full operator of our addon does not produce the crash.

Exact steps for others to reproduce the error

  • Files: id_defgroup_list_get_crash.zip
  • This zip includes another zip which can be installed as an addon. I also already added a bunch of prints to the addon so it's easier to see how far it gets.
  • With the addon enabled, open jay.rigging.blend, and click the Update Grooming button.
  • It should crash with the above stack trace.

grooming_crash-2021-07-16_15.51.03.mp4
Interestingly, as you see later in the video, deleting some of the objects, then pressing the Update Grooming button, then undo-ing to before the objects were deleted, and then pressing the Update Grooming button again, avoids the crash.
Yet at the same time, using the undo history to go back to "Original" still results in the crash. So that's odd.

**System Information** Operating system: Linux-5.8.0-7642-generic-x86_64-with-glibc2.32 64 Bits Graphics card: GeForce RTX 2080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.56 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-07-16 07:47, hash: `038345fa56` Worked: Before 3b6ee8cee7080af200e25 sorry @HooglyBoogly @JacquesLucke, got another one for ya! **Short description of error** In our pipeline, we keep character hair grooming and rigging in separate files, and use an addon to combine them. Recently, the "Update Grooming" button started crashing with the following stack trace: [P2257](https://archive.blender.org/developer/P2257.txt) I have hunted down the crash to this line in our code: ``` bpy.ops.object.data_transfer({'object': obj_from, 'selected_editable_objects': [obj_to]}, data_type='VGROUP_WEIGHTS', use_create=True, vert_mapping='NEAREST', layers_select_src='ALL', layers_select_dst='NAME', mix_mode='REPLACE') ``` Running Blender with `--threads 1` also produces the same crash, but running only this line instead of the full operator of our addon does not produce the crash. **Exact steps for others to reproduce the error** - Files: [id_defgroup_list_get_crash.zip](https://archive.blender.org/developer/F10225929/id_defgroup_list_get_crash.zip) - This zip includes another zip which can be installed as an addon. I also already added a bunch of prints to the addon so it's easier to see how far it gets. - With the addon enabled, open jay.rigging.blend, and click the Update Grooming button. - It should crash with the above stack trace. [grooming_crash-2021-07-16_15.51.03.mp4](https://archive.blender.org/developer/F10225938/grooming_crash-2021-07-16_15.51.03.mp4) Interestingly, as you see later in the video, deleting some of the objects, then pressing the Update Grooming button, then undo-ing to before the objects were deleted, and then pressing the Update Grooming button again, avoids the crash. Yet at the same time, using the undo history to go back to "Original" still results in the crash. So that's odd.
Author
Member

Added subscribers: @HooglyBoogly, @JacquesLucke, @Mets

Added subscribers: @HooglyBoogly, @JacquesLucke, @Mets
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can reproduce.
Full Backtrace: P2259

Here BKE_object_defgroup_list is called with an armature object, which does not have vertex groups.

After a simple fix for that I'm running into a different problem: P2260. Hard to tell if it is related.

Can reproduce. Full Backtrace: [P2259](https://archive.blender.org/developer/P2259.txt) Here `BKE_object_defgroup_list` is called with an armature object, which does not have vertex groups. After a simple fix for that I'm running into a different problem: [P2260](https://archive.blender.org/developer/P2260.txt). Hard to tell if it is related.
Hans Goudey self-assigned this 2021-07-16 17:54:36 +02:00

This issue was referenced by c4df8ac1a4

This issue was referenced by c4df8ac1a40c7a98a4244c7c14e19791b1e1e99f
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#89899
No description provided.